# OpsPulse

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-etl.yml  pipeline.yml
data/input/: cities.csv
data/processed/: weather_processed.csv
data/raw/: ahemdabad.json  bengaluru.json  bhopal.json  bhubaneshwar.json  chandigarh.json  chennai.json  delhi.json  guwahati.json  hyderabad.json  indore.json  jaipur.json  kochi.json  kolkata.json  lucknow.json  mumbai.json  nagpur.json  patna.json  pune.json  srinagar.json  surat.json
notebooks/: eda.ipynb
opspulse.egg-info/: PKG-INFO  SOURCES.txt
sql/: 01_database_exploration.sql  02_basic_queries.sql  03_aggregation_queries.sql  04_business_analytics.sql
src/: config.py  database.py  fetch_weather.py  logger.py  main.py  test_logger.py  transform.py
tests/: test_transform.py
